[gd_scene load_steps=7 format=2]

[ext_resource path="res://Particle/Energy.gd" type="Script" id=1]
[ext_resource path="res://image/Par_2.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.24305

[sub_resource type="CircleShape2D" id=2]
radius = 6.07011

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Energy/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.552941, 1, 1 ), Color( 0.74902, 0.968627, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Energy:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Energy/Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "pop"
length = 0.11
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Energy/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3, 3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.11 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Energy/Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.57, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Energy/Light2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.552941, 1, 1 ), Color( 0.72549, 0.898039, 1, 1 ) ]
}

[node name="Energy" type="RigidBody2D"]
z_index = 3
collision_layer = 8
collision_mask = 52
mass = 0.00102041
gravity_scale = 4.0
linear_velocity = Vector2( -90, 0 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Energy" type="Area2D" parent="."]
scale = Vector2( 0.1, 0.1 )
collision_layer = 8
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="Energy"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Energy"]
modulate = Color( 0, 0.552941, 1, 1 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="Energy"]
texture = ExtResource( 2 )
color = Color( 0, 0.623529, 1, 1 )
energy = 0.57

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 3 )
anims/pop = SubResource( 4 )

[connection signal="area_entered" from="Energy" to="." method="_on_Energy_area_entered"]
[connection signal="body_entered" from="Energy" to="." method="_on_Energy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
